@@ -1,3 +1,5 @@
-EBUILD qmmp-9999.ebuild 1960 RMD160 a0f983f77121ac0cbd4ed3df9075c6e0f9dda691 SHA1 f5195b9c17d0647b708a3fc0108421c0a6e92fef SHA256 664ef8eb9ab8b1d6c3d9ce23450e7ba60ac1f2e1370fd45e0a518bf05630dd29
-MISC ChangeLog 414 RMD160 9f6e6aedfffe2e272f1b04664078faaea3afb676 SHA1 f7e5f76c27c71710c9218304ed44dae5b4dd78f3 SHA256 52d86bad5f1ba7b808cb36c65669c7f1a9c5903c0dbc3e5e23efa5beaf03c21a
-MISC metadata.xml 246 RMD160 808e7967bc078f81a51f6073994c416947678190 SHA1 575ba42399f869d8958c2d6fcdf3602c6a96289d SHA256 0a41b3dbf6a9303e0a0dc4a3436c2bbb70e1c020a03110560c9a803e16071007
+DIST qmmp-0.3.0.tar.bz2 486650 RMD160 ff51ff434299b616da736467a0d33977d379f6c4 SHA1 3bbe00daa0227e64d97f797002ffff49b27e01a0 SHA256 b2e3b253ea0a2a9c6f464cf247539e4a83897ae9a92c6389805f6bf1ca89bfe3
+EBUILD qmmp-0.3.0.ebuild 2219 RMD160 a9a6a4c6246f756a9856bb783960bfb589e171ce SHA1 94abfe3ea863d9fa1430b7d8747173d76527fa3f SHA256 17c6d5211481387251172d1df29252ac7d378a12f7830c8cb0695a02acc55d28
+EBUILD qmmp-9999.ebuild 2222 RMD160 728695c1ba42c5125cab469096c3789a1ebad3dc SHA1 3a4408559ab281887da28528bfbb55c58a1288ae SHA256 b1b78d8c8dfda27e49a4905f546905910ff2780695c113e0d8f78a5aea736941
+MISC ChangeLog 800 RMD160 c83d18bbc42e2ec1caa4b525721d4d77bc5054bf SHA1 58fb2b62a0647ea23cf85b0e5d691248834ac8d2 SHA256 a64cfb003c6b100fb5205bd706af82e202df8ca001b2cc9a17a0b14dea97e933
+MISC metadata.xml 467 RMD160 902dc34ff2858f3c1e0fc1a9bb4480f889a28a27 SHA1 cc040f1519138421f39d539a3ba3f616580db32d SHA256 9a7fdeabe603be14bc5517c18dfb5b52e90650ae5619addcf4adbd65a5071603
