@@ -2,6 +2,10 @@
 # Add your name and the date, as well as an explanation for the mask
 # Make sure the atoms you add are valid!
 
+# Markos Chandras <hwoarang@gentoo.org> (04 Jul 2009)
+# Major updates from previous version. Needs more testing
+=media-sound/qmmp-0.3.0
+
 # Markos Chandras <hwoarang@gentoo.org> (28 Jun 2009)
 # Masking PyQt4 pre-releases
 =dev-python/PyQt4-4.5.2_pre*
